--- a/todolistapp/package.json
+++ b/todolistapp/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "angular-crash-todolist",
+  "name": "todolistapp",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
@@ -15,10 +15,12 @@
     "@angular/common": "~9.1.1",
     "@angular/compiler": "~9.1.1",
     "@angular/core": "~9.1.1",
+    "@angular/fire": "^6.0.0",
     "@angular/forms": "~9.1.1",
     "@angular/platform-browser": "~9.1.1",
     "@angular/platform-browser-dynamic": "~9.1.1",
     "@angular/router": "~9.1.1",
+    "firebase": "^7.14.0",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
